  they may be altogether dropped or otherwise changed at will in the future.

- QLocale
  * toShort(), toUShort(), toInt(), toUInt(), toLongLong() and toULongLong() no
    longer take a parameter for base, they will only perform localised base 10
    conversions. For converting other bases use the QString methods instead.

- QSystemLocale has been removed from the public API.

- QSqlQueryModel::indexInQuery() is now virtual. See note below under QtSql.

- QSqlDriver::subscribeToNotification, unsubscribeFromNotification,
  subscribedToNotifications, isIdentifierEscaped, and stripDelimiters
  are now virtual. See note below under QtSql.

- qMacVersion() has been removed. Use QSysInfo::macVersion() or
  QSysInfo::MacintoshVersion instead.

- QColorDialog::customColor() now returns a QColor value instead of QRgb.
  QColorDialog::setCustomColor() and QColorDialog::setStandardColor() now
  take a QColor value for their second parameter instead of QRgb.

- QPageSetupDialog has had the PageSetupDialogOption enum and the api to
  set and get the enum removed as none of the Options are used any more.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

- The directory structure of the qtbase unit-tests has been reworked to
  more closely match the directory structure of the code under test.
  Integration tests have been moved to tests/auto/integrationtests.

- Qt is compiled with C++11 support enabled by default, provided the compiler
  supports C++11. Qmake based projects can enable C++11 support explicitly
  using 'CONFIG+=c++11' in their .pro files. To enable it conditionally, use
  'contains(QT_CONFIG,c++11):CONFIG+=c++11'. This will enable C++11 support
  only if Qt was built with C++11 support.

Third party components
----------------------
