@@ -639,15 +639,13 @@ public:
     QDateTime toDateTime(const QString &string, const QString &format) const;
 #endif
 
-    // ### Qt 5: We need to return QString from these function since
-    //           unicode data contains several characters for these fields.
-    QChar decimalPoint() const;
-    QChar groupSeparator() const;
-    QChar percent() const;
-    QChar zeroDigit() const;
-    QChar negativeSign() const;
-    QChar positiveSign() const;
-    QChar exponential() const;
+    QString decimalPoint() const;
+    QString groupSeparator() const;
+    QString percent() const;
+    QString zeroDigit() const;
+    QString negativeSign() const;
+    QString positiveSign() const;
+    QString exponential() const;
 
     QString monthName(int, FormatType format = LongFormat) const;
     QString standaloneMonthName(int, FormatType format = LongFormat) const;
