@@ -1111,12 +1111,17 @@ QVariant QDoubleSpinBoxPrivate::validateAndInterpret(QString &input, int &pos,
     const bool plus = max >= 0;
     const bool minus = min <= 0;
 
+    const QString dec = locale.decimalPoint();
+    const int decLen = dec.length();
+    const QString grp = locale.groupSeparator();
+    const int grpLen = dec.length();
+
     switch (len) {
     case 0:
         state = max != min ? QValidator::Intermediate : QValidator::Invalid;
         goto end;
     case 1:
-        if (copy.at(0) == locale.decimalPoint()
+        if (copy.startsWith(dec)
             || (plus && copy.at(0) == QLatin1Char('+'))
             || (minus && copy.at(0) == QLatin1Char('-'))) {
             state = QValidator::Intermediate;
@@ -1124,7 +1129,7 @@ QVariant QDoubleSpinBoxPrivate::validateAndInterpret(QString &input, int &pos,
         }
         break;
     case 2:
-        if (copy.at(1) == locale.decimalPoint()
+        if (copy.midRef(1, decLen) == dec
             && ((plus && copy.at(0) == QLatin1Char('+')) || (minus && copy.at(0) == QLatin1Char('-')))) {
             state = QValidator::Intermediate;
             goto end;
@@ -1133,24 +1138,24 @@ QVariant QDoubleSpinBoxPrivate::validateAndInterpret(QString &input, int &pos,
     default: break;
     }
 
-    if (copy.at(0) == locale.groupSeparator()) {
+    if (copy.startsWith(grp)) {
         QSBDEBUG() << __FILE__ << __LINE__<< "state is set to Invalid";
         state = QValidator::Invalid;
         goto end;
     } else if (len > 1) {
-        const int dec = copy.indexOf(locale.decimalPoint());
-        if (dec != -1) {
-            if (dec + 1 < copy.size() && copy.at(dec + 1) == locale.decimalPoint() && pos == dec + 1) {
-                copy.remove(dec + 1, 1); // typing a delimiter when you are on the delimiter
+        const int decPos = copy.indexOf(dec);
+        if (decPos != -1) {
+            if (decPos + decLen < copy.size() && copy.midRef(decPos + decLen, decLen) == dec && pos == decPos + decLen) {
+                copy.remove(decPos + decLen, decLen); // typing a delimiter when you are on the delimiter
             } // should be treated as typing right arrow
 
-            if (copy.size() - dec > decimals + 1) {
+            if (copy.size() - decPos > decimals + decLen) {
                 QSBDEBUG() << __FILE__ << __LINE__<< "state is set to Invalid";
                 state = QValidator::Invalid;
                 goto end;
             }
-            for (int i=dec + 1; i<copy.size(); ++i) {
-                if (copy.at(i).isSpace() || copy.at(i) == locale.groupSeparator()) {
+            for (int i=decPos + decLen; i<copy.size(); ++i) {
+                if (copy.at(i).isSpace() || copy.midRef(i, grpLen) == grp) {
                     QSBDEBUG() << __FILE__ << __LINE__<< "state is set to Invalid";
                     state = QValidator::Invalid;
                     goto end;
@@ -1159,12 +1164,12 @@ QVariant QDoubleSpinBoxPrivate::validateAndInterpret(QString &input, int &pos,
         } else {
             const QChar last = copy.at(len - 1);
             const QChar secondLast = copy.at(len - 2);
-            if ((last == locale.groupSeparator() || last.isSpace())
-                && (secondLast == locale.groupSeparator() || secondLast.isSpace())) {
+            if ((copy.midRef(len - grpLen, grpLen) == grp || last.isSpace())
+                && (copy.midRef(len - (grpLen * 2), grpLen) == grp || secondLast.isSpace())) {
                 state = QValidator::Invalid;
                 QSBDEBUG() << __FILE__ << __LINE__<< "state is set to Invalid";
                 goto end;
-            } else if (last.isSpace() && (!locale.groupSeparator().isSpace() || secondLast.isSpace())) {
+            } else if (last.isSpace() && (!grp.at(0).isSpace() || secondLast.isSpace())) {
                 state = QValidator::Invalid;
                 QSBDEBUG() << __FILE__ << __LINE__<< "state is set to Invalid";
                 goto end;
@@ -1178,8 +1183,8 @@ QVariant QDoubleSpinBoxPrivate::validateAndInterpret(QString &input, int &pos,
         QSBDEBUG() << __FILE__ << __LINE__ << locale << copy << num << ok;
 
         if (!ok) {
-            if (locale.groupSeparator().isPrint()) {
-                if (max < 1000 && min > -1000 && copy.contains(locale.groupSeparator())) {
+            if (grp.at(0).isPrint()) {
+                if (max < 1000 && min > -1000 && copy.contains(grp)) {
                     state = QValidator::Invalid;
                     QSBDEBUG() << __FILE__ << __LINE__<< "state is set to Invalid";
                     goto end;
@@ -1187,7 +1192,7 @@ QVariant QDoubleSpinBoxPrivate::validateAndInterpret(QString &input, int &pos,
 
                 const int len = copy.size();
                 for (int i=0; i<len- 1; ++i) {
-                    if (copy.at(i) == locale.groupSeparator() && copy.at(i + 1) == locale.groupSeparator()) {
+                    if (copy.midRef(i, grpLen) == grp && copy.midRef(i + grpLen, grpLen) == grp) {
                         QSBDEBUG() << __FILE__ << __LINE__<< "state is set to Invalid";
                         state = QValidator::Invalid;
                         goto end;
@@ -1195,9 +1200,9 @@ QVariant QDoubleSpinBoxPrivate::validateAndInterpret(QString &input, int &pos,
                 }
 
                 QString copy2 = copy;
-                copy2.remove(locale.groupSeparator());
+                copy2.remove(grp);
                 num = locale.toDouble(copy2, &ok);
-                QSBDEBUG() << locale.groupSeparator() << num << copy2 << ok;
+                QSBDEBUG() << grp << num << copy2 << ok;
 
                 if (!ok) {
                     state = QValidator::Invalid;
